--- a/.github/workflows/upload-notebook-submission.yml
+++ b/.github/workflows/upload-notebook-submission.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           context: ${{ github.workspace }}/jupyter-notebook-submissions
           load: true
-          tags: ${{ env.FULL_IMAGE_TAG }}
+          tags: ${{ env.IMAGE_TAG }}
       -
         name: Sandbox test
         run: |
