--- a/.github/workflows/upload-notebook-submission.yml
+++ b/.github/workflows/upload-notebook-submission.yml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: registry.webis.de
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: tira-user-ir-lab-sose-2023-order-google-scholar
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Set environment variable for full image tag
