--- a/.github/workflows/upload-notebook-submission.yml
+++ b/.github/workflows/upload-notebook-submission.yml
@@ -33,6 +33,10 @@ jobs:
           echo "IMAGE_TAG=registry.webis.de/code-research/tira/tira-user-ir-lab-sose-2023-order-google-scholar/notebook-submission:${{ github.sha }}" >> $GITHUB_ENV
           echo "INPUT_DIRECTORY=${{ github.workspace }}/jupyter-notebook-submissions/example-ir-dataset/" >> $GITHUB_ENV
       -
+        name: Set environment variable for full image tag
+        run: |
+          env
+      -
         name: Set up Python 3.8
         uses: actions/setup-python@v4
         with:
