--- a/.github/workflows/upload-notebook-submission.yml
+++ b/.github/workflows/upload-notebook-submission.yml
@@ -42,6 +42,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install tira>=0.0.58
+          pip3 freeze|grep tira
       -
         name: Build and export to Docker
         uses: docker/build-push-action@v4
