--- a/jupyter-notebook-submissions/Dockerfile
+++ b/jupyter-notebook-submissions/Dockerfile
@@ -1,4 +1,4 @@
-FROM webis/tira-ir-starter-pyterrier:0.0.3-base
+FROM webis/tira-ir-starter-pyterrier:0.0.4-base
 
 RUN rm -Rf /workspace/*.ipynb
 
@@ -6,11 +6,17 @@ ADD *.ipynb /workspace
 
 ADD example-ir-dataset /tmp-delete-ir-dataset
 
-RUN export TIRA_INPUT_DIRECTORY=/tmp-delete-ir-dataset \
-	&& export TIRA_OUTPUT_DIRECTORY=/tmp \
-	&& ./run-pyterrier-notebook.py --input ${TIRA_INPUT_DIRECTORY} --output ${TIRA_OUTPUT_DIRECTORY} --notebook /workspace/pyterrier-notebook.ipynb \
+ARG JUPYTER_NOTEBOOK=pyterrier-notebook.ipynb
+
+RUN export TIRA_INPUT_DATASET=/tmp-delete-ir-dataset \
+	&& mv /workspace/${JUPYTER_NOTEBOOK} /workspace/notebook.ipynb \
+	&& export TIRA_OUTPUT_DIR=/tmp \
+	&& ./run-pyterrier-notebook.py --input ${TIRA_INPUT_DATASET} --output ${TIRA_OUTPUT_DIR} --notebook /workspace/notebook.ipynb \
 	&& rm -R /tmp-delete-ir-dataset \
 	&& head -3 /tmp/run.txt \
 	&& rm /tmp/run.txt \
 	&& rm -R /root/.ir_datasets \
 	&& jupyter trust /workspace/*.ipynb
+
+ENTRYPOINT [ "/workspace/run-pyterrier-notebook.py", "--input", "$inputDataset", "--output", "$outputDir", "--notebook", "/workspace/notebook.ipynb" ]
+
