--- a/.github/workflows/upload-notebook-submission.yml
+++ b/.github/workflows/upload-notebook-submission.yml
@@ -6,7 +6,6 @@ on:
         required: true
         default: 'pyterrier-notebook.ipynb'
 
-
 jobs:
   docker-build:
     runs-on: ubuntu-latest
@@ -25,8 +24,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: registry.webis.de
-          username: tira-user-ir-lab-sose-2023-order-google-scholar
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.TIRA_DOCKER_REGISTRY_USER }}
+          password: ${{ secrets.TIRA_DOCKER_REGISTRY_TOKEN }}
       -
         name: Set up Dependencies
         uses: actions/setup-python@v4
@@ -36,16 +35,16 @@ jobs:
         name: Install required python packages
         run: |
           python -m pip install --upgrade pip
-          pip install tira>=0.0.59
-
+          pip install tira>=0.0.81
       -
         name: Set environment variables
         run: |
-          echo "IMAGE_TAG=registry.webis.de/code-research/tira/tira-user-ir-lab-sose-2023-order-google-scholar/notebook-submission:${{ github.sha }}" >> $GITHUB_ENV
+          echo "IMAGE_TAG=registry.webis.de/code-research/tira/tira-user-TIRA_USER_FOR_AUTOMATIC_REPLACEMENT/submission:${{ github.sha }}" >> $GITHUB_ENV
           echo "INPUT_DIRECTORY=${{ github.workspace }}/jupyter-notebook-submissions/example-ir-dataset/" >> $GITHUB_ENV
+          echo "TIRA_JUPYTER_NOTEBOOK=${{ inputs.notebook }}" >> $GITHUB_ENV
           tira-run --export-submission-from-jupyter-notebook ${{ github.workspace }}/jupyter-notebook-submissions/${{ inputs.notebook }} >> $GITHUB_ENV
       - name: Build, test, and upload image
         run: |
-          docker build -t ${{ env.IMAGE_TAG }} ${{ github.workspace }}/jupyter-notebook-submissions
-          tira-run --input-directory ${{ env.INPUT_DIRECTORY }} --output-directory /tmp/tira-output --image ${{ env.IMAGE_TAG }} --command '${{ env.TIRA_COMMAND }}'
-          docker push ${{ env.IMAGE_TAG }}
+          docker build -t ${{ env.IMAGE_TAG }} --build-arg JUPYTER_NOTEBOOK=${{inputs.notebook}} ${{ github.workspace }}/jupyter-notebook-submissions
+          tira-run --input-directory ${{ env.INPUT_DIRECTORY }} --image ${{ env.IMAGE_TAG }} --push
+
