--- a/.github/workflows/upload-notebook-submission.yml
+++ b/.github/workflows/upload-notebook-submission.yml
@@ -37,7 +37,7 @@ jobs:
         name: Install required python packages
         run: |
           python -m pip install --upgrade pip
-          pip install tira>=0.0.83
+          pip install tira==0.0.100
       -
         name: Set environment variables
         run: |
