add random baseline notebook

--- a/.github/workflows/upload-random-baseline-notebook.yml
+++ b/.github/workflows/upload-random-baseline-notebook.yml
@@ -7,7 +7,7 @@ on:
         required: true
         default: random-baseline-notebook
       command:
-        description: The command that is to be executed to run the software. The variable $inputDataset points to the input directory that contains the inputs.jsonl file, the variable $outputDir points to the directory where the resulting predictions.jsonl should be stored.
+        description: The command that is to be executed to run the software. The variable $inputDataset points to the input directory that contains the sentences.tsv file, the variable $outputDir points to the directory where the resulting predictions.tsv should be stored.
         required: true
         default: tira-run-notebook --notebook /random_baseline.ipynb --input $inputDataset --output $outputDir
       dockerfile:
@@ -63,10 +63,10 @@ jobs:
           	TIRA_CODE_REPOSITORY_ID=${{ secrets.TIRA_CODE_REPOSITORY_ID }} \
           	TIRA_DOCKER_FILE=${{ inputs.dockerfile }} \
           	TIRA_DOCKER_PATH=${{ inputs.dockerpath }} \
-          	TIRA_COMMAND=${{ inputs.command }} \
+          	TIRA_COMMAND="${{ inputs.command }}" \
           	>> $GITHUB_ENV 
       - name: Build, test, and upload image
         run: |
-          docker build -t ${{ env.IMAGE_TAG }} -f ${{ github.workspace }}/random-baseline-notebook
-          tira-run --input-dataset TIRA_DATASET_FOR_AUTOMATIC_REPLACEMENT --image ${{ env.IMAGE_TAG }} --push true
+          docker build -t ${{ env.IMAGE_TAG }} ${{ github.workspace }}/${{ inputs.dockerpath }}
+          tira-run --input-directory toy-dataset --image ${{ env.IMAGE_TAG }} --push true
 
